--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,30 @@
 [package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
-name   	= "{{project-name}}"
+name   	= "dummy"
 version	= "0.1.0"
 authors	= ["{{authors}}"]
 edition	= "2021"
 
+[workspace]
+members = ["helper"]	# relative to the workspace root
+
+[[bin]]
+name	= "dummy_bin"
+path	= "src/dummy.bin.rs"
+
+[lib]
+name      	= "dummy_lib"
+path      	= "src/dummy.lib.rs"
+crate-type	= ['lib','cdylib']
+
 [dependencies]
+helper   	= {path="helper"}
 log      	= "0.4"
 stderrlog	= "0.5"
 anyhow   	= "1.0"
 faccess  	= "0.2"
+
+[build-dependencies]
+log	= "0.4"
 
 [profile.release]
 # opt        	for      	size
