--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors	= ["{{authors}}"]
 edition	= "2021"
 
 [workspace]
-members = ["helper"]	# relative to the workspace root
+members = ["helper","xtask"]	# relative to the workspace root
 
 [[bin]]
 name	= "dummy_bin"
