--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors	= ["{{authors}}"]
 edition	= "2021"
 
 [workspace]
-members = ["./","helper","xtask"]	# relative to the workspace root
+members = ["./","helper","helper_proc","xtask"]	# relative to the workspace root
 
 [[bin]]
 name	= "dummy_bin"
@@ -17,11 +17,12 @@ path      	= "src/dummy.lib.rs"
 crate-type	= ['lib','cdylib']
 
 [dependencies]
-helper   	= {path="helper"}
-log      	= "0.4"
-stderrlog	= "0.5"
-anyhow   	= "1.0"
-faccess  	= "0.2"
+helper     	= {path="helper"}
+helper_proc	= {path="helper_proc"}
+log        	= "0.4"
+stderrlog  	= "0.5"
+anyhow     	= "1.0"
+faccess    	= "0.2"
 
 [build-dependencies]
 log	= "0.4"
