--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,10 @@ codegen-units	= 1      	# |16|    reduce parallel code generation
 panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind
 
 # Overrides doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides
-[profile.dev.package."*"] # panic/lto/rpath can't be overriden
+[profile.dev.package."*"] # panic/lto/rpath can't be overridden
 opt-level	= 3 	# build dependencies in release mode to make the main app faster
 [profile.dev.build-override]
-opt-level	= 3	# build scripts and proc-macros in releas mode to make them faster
+opt-level	= 3	# build scripts and proc-macros in release mode to make them faster
 
 [lint.rust]
 non_snake_case        	= "allow"
