--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ path      	= "src/dummy.lib.rs"
 crate-type	= ['lib','cdylib']
 
 [dependencies]
-helper     	= {path="helper"}
-helper_proc	= {path="helper_proc"}
+helperes     	= {git="https://github.com/eugenesvk/helperes.git", tag="0.1.0"}
+helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git", tag="0.1.0"}
 log        	= "0.4"
 stderrlog  	= "0.5"
 anyhow     	= "1.0"
