--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ log          	= "0.4"
 stderrlog    	= "0.5"
 anyhow       	= "1.0"
 faccess      	= "0.2"
+docpos       	= "0.2.0" #add doc comments after items, not before them
 
 [build-dependencies]
 log	= "0.4"
