--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ path      	= "src/dummy.lib.rs"
 crate-type	= ['lib','cdylib']
 
 [dependencies]
-helperes     	= {git="https://github.com/eugenesvk/helperes.git"     , tag="0.1.2"}
-helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git", tag="0.1.0"}
+helperes     	= {git="https://github.com/eugenesvk/helperes.git"     } #, tag="0.1.2"
+helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git"} #, tag="0.1.0"
 log          	= "0.4"
 stderrlog    	= "0.5"
 anyhow       	= "1.0"
