--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,8 +5,8 @@ edition	= "2021"
 
 [dependencies]
 dummy        	= {path= "..", default-features=false}
-helperes     	= {git="https://github.com/eugenesvk/helperes.git"     , tag="0.1.0"}
-helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git", tag="0.1.0"}
+helperes     	= {git="https://github.com/eugenesvk/helperes.git"     } #, tag="0.1.0"
+helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git"} #, tag="0.1.0"
 log          	= "0.4"
 stderrlog    	= "0.5"
 anyhow       	= "1.0"
